# projeto-ciencia-dados

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
exercicios/01_pandas_sqlite/: main.py
exercicios/02_numpy_matplotlib/: main.py
notebooks/: demo.ipynb
